# Projet-C-glade-2

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  final-project-c.glade.bak  final-project-c.gladep.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.c~  callbacks.h  final-project-c  interface.c  interface.c.bak  interface.h  main.c  reclamation.txt
src/.deps/: avis.Po
